# Fraktale

./: .gitignore  CMakeLists.txt  README.md  barnsley_fern.py  barnsley_fern_widget.py  execution_widget.py  gradient.py  icon.py  julia.py  julia_widget.py  lib.py  main.py  mainWindow.py  mainWindows.py  mandelbort_c.py  mandelbrot.py  mandelbrot_widget.py  pallete_widget.py  parameter_dialog.py  size_widget.py  sliders_widget.py  viewable_label.py  window.ui
include/: BarnsleyFern.hpp  Exchanger.hpp  Exchanger.tpp  Gradient.hpp  Julia.hpp  Mandelbrot.hpp
src/: Backend.cpp  BarnsleyFern.cpp  Gradient.cpp  Julia.cpp  Mandelbrot.cpp
